examples/01-kgateway/tlsroute-terminate/01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: 01-kgateway-tlsroute-terminate
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
