examples/01-kgateway/tlsroute-terminate/02-my-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: 01-example-kgateway
  labels:
    app.kubernetes.io/name: MyApp
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: 01-example-kgateway
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 80
