examples/01-kgateway/tlsroute-terminate/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: 01-kgateway-tlsroute-terminate
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 80
